After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 760881 - file can't be saved if executable attribute is not set
file can't be saved if executable attribute is not set
Status: RESOLVED FIXED
Product: gtk+
Classification: Platform
Component: Widget: GtkFileChooser
unspecified
Other Linux
: Normal normal
: ---
Assigned To: gtk-bugs
Federico Mena Quintero
: 760975 (view as bug list)
Depends on:
Blocks:
 
 
Reported: 2016-01-20 11:04 UTC by Ondrej Holy
Modified: 2016-01-22 09:47 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
file chooser: Allow saving even if executable attribute is not set (1.41 KB, patch)
2016-01-20 11:04 UTC, Ondrej Holy
committed Details | Review

Description Ondrej Holy 2016-01-20 11:04:11 UTC
Following commit caused that it is not possible to save files on e.g. smb, or ftp shares:
https://git.gnome.org/browse/gtk+/commit/?id=8e975b28ff460db3bf8ea99f5a07fb9d709c4f1c

See Bug 753969 for more details.

The problem is that some backends do not set executable attribute at all and thus error is shown instead of choosing the file.

It was originally reported downstream:
https://bugzilla.redhat.com/show_bug.cgi?id=1204907
Comment 1 Ondrej Holy 2016-01-20 11:04:50 UTC
Created attachment 319436 [details] [review]
file chooser: Allow saving even if executable attribute is not set
Comment 2 Ondrej Holy 2016-01-20 11:05:45 UTC
Comment on attachment 319436 [details] [review]
file chooser: Allow saving even if executable attribute is not set

Let's assume that the folder is accessible even if the attribute is not set.
Comment 3 Matthias Clasen 2016-01-20 13:04:29 UTC
Review of attachment 319436 [details] [review]:

ok
Comment 4 Paolo Borelli 2016-01-20 13:05:00 UTC
Review of attachment 319436 [details] [review]:

The patch looks good... even better would be to fix the gvfs backends :)
Comment 5 Ondrej Holy 2016-01-20 13:13:21 UTC
Comment on attachment 319436 [details] [review]
file chooser: Allow saving even if executable attribute is not set

Thanks for review! Pushed to master as commit b2eaed6 and gtk-3-18 as commit d5aa2e9 .
Comment 6 Ondrej Holy 2016-01-20 13:15:58 UTC
I will take a look in gvfs backends, but the problem is that some protocols doesn't provide such info unfortunately, or it is unreliable. We can set can-execute = TRUE for directories even without support of protocols, however it should not be always true...
Comment 7 Ondrej Holy 2016-01-22 09:47:50 UTC
*** Bug 760975 has been marked as a duplicate of this bug. ***